[package]
name = "s3-proxy"
description = "A reverse proxy for S3-buckets"
version = "0.0.1"
edition = "2021"

categories = ["network-programming", "web-programming::http-server"]
authors = ["Markus Kasten <github@markuskasten.eu>"]
repository = "https://github.com/markus-k/s3-proxy"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.5", features = ["headers"] }
dotenv = "0.15"
rust-s3 = "0.32"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
